Pop off and add a new lement to update merged times